# llm-rag-dip

./: .env.sample  .gitignore  README.MD  analyze_nss.ipynb  extract_nss_entitties.py  generate_nss_questions.ipynb  langchain-demo.ipynb  llama-index-rag-exp.ipynb  merge_embedding.ipynb  preprocess_nss.ipynb  pyproject.toml  scrape_nss.py
CRAG/: convert_data_flashrag.ipynb  explore_data.ipynb
CRAG/flashrag_format_data/: flashrag_crag_questions.jsonl
FlashRAG/: explore_results.ipynb  fix_corpus.py  fix_corpus_2.py  fix_index.ipynb  merge_embedding.ipynb  process_experiment_results.ipynb  process_mmlu_subset.ipynb
SACD/: analyze_nss.ipynb  chunk_stanza_nss.py  explore_nss_results_questions.ipynb  extract_nss_entitties.py  generate_nss_questions.ipynb  lemmatise_corpus_stanza.py  merge_nss_entities.ipynb  preprocess_nss.ipynb  translate_demo.ipynb
SACD/flashrag_format_data/: sacd_questions.jsonl
